example/dnet-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: dnet-nodeport
spec:
  type: NodePort
  selector:
    app: dnet-unit-8
  ports:
  - name: dnet-transmissionunit
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30000
