example/dnet-unit-4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnet-unit-4
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dnet-unit-4
  template:
    metadata:
      name: dnet-unit-4-pod
      labels:
        app: dnet-unit-4
    spec:
      containers:
        - name: dnet-computationunit
          image: yindaheng98/dnet-computationunit
          command: ["python"]
          args: ["ComputationUnit", "-e", "4"]
        - name: dnet-transmissionunit
          image: yindaheng98/dnet-transmissionunit
          command: ["npm"]
          args: ["run", "start", "--", "-n", "dnet-unit-8:8080"]
          ports:
            - containerPort: 8080
        - name: dnet-middleware
          image: rabbitmq:alpine
---
apiVersion: v1
kind: Service
metadata:
  name: dnet-unit-4
spec:
  selector:
    app: dnet-unit-4
  ports:
  - name: dnet-transmissionunit
    protocol: TCP
    port: 8080
    targetPort: 8080
