example/dnet-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dnet-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: dnet-unit-8
          servicePort: 8080
